--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -33,7 +33,7 @@
 
         <div class="bilde"> <!--Klassen blir brukt i Liten og Medium skjerm-->
             <!--Bildet hentet fra: https://en.wikipedia.org/wiki/Restaurant -->
-            <img src="restaurant.jpg" alt="restaurant" title="Foto: Sophia i Washington D.C, USA">
+            <img src="/Side2/Images/restaurant.jpg" alt="restaurant" title="Foto: Sophia i Washington D.C, USA">
         </div>
 
         <div class="info">
@@ -104,7 +104,7 @@
           <h2>
             Sosiale medier:
           </h2>
-
+            <!--Ikoner importert fra https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css-->
             <div class="Twitter">
               <a href="https://www.twitter.com" target="_blank">
                 <i class="fa-brands fa-twitter" id="twitter-logo"> <br> Twitter</i>  
