--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -68,6 +68,7 @@
       Sosiale medier:
     </h2>
 
+         <!--Ikoner importert fra https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css-->
       <div class="Twitter">
         <a href="https://www.twitter.com" target="_blank">
           <i class="fa-brands fa-twitter" id="twitter-logo"> <br> Twitter</i>  
