--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -68,7 +68,7 @@
         </h2>
 
         <div class="Bryllups-mottakelse">
-              <!--Bilde hentet fra: -->
+              <!--Bilde hentet fra:-->
 
               <img src="/Side1/Images/Bryllup.jpeg" class="bryllup" alt="Bryllupsbilde" title="Foto: Fotografene Storm Leth / www.stormleth.no  ">
           <div class="Bryllups-Info">
@@ -136,6 +136,8 @@
         <h2>
           Sosiale medier:
         </h2>
+
+        <!--Ikoner importert fra https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css-->
           <div class="Twitter">
             <a href="https://www.twitter.com" target="_blank">
               <i class="fa-brands fa-twitter" id="twitter-logo"> <br> Twitter</i>  
