--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -33,21 +33,26 @@
   </div>
   
 
-<div class="grid-container">
-  <div class=grid1>
+<div class="Innhold">
+  <div class=Før_test>
     <!--Bilde hentet fra: -->
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image1" alt="Testing" title="Foto: ">
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image1" alt="Testing">
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image2" alt="Testing2">
   </div>
 
-  <div class="grid2">
+  <div class="Tekst">
     <h2>Hvordan vi testet koden</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam enim corrupti laborum labore cum expedita distinctio ipsam eveniet nostrum. 
-      Consequatur, minus at! Porro quod est id doloribus pariatur magnam tempora!</p>
+      Consequatur, minus at! Porro quod est id doloribus pariatur magnam tempora!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quis numquam repudiandae dicta ratione rerum minus inventore saepe, voluptatem, eligendi sapiente quia. Deserunt tempore vitae debitis provident nam consequuntur consectetur.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, eum omnis aperiam inventore cumque, accusamus quo delectus nulla facere doloremque corrupti quibusdam aut asperiores quod illo facilis ratione consequuntur qui.
+    </p>
   </div>
 
-  <div class="grid3">
+  <div class="Etter_test">
     <!--Bilde hentet fra: -->
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image2" alt="Testing2" title="Foto: ">
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image3" alt="Testing3">
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image4" alt="Testing4">
   </div>
 </div>
 
