--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -42,10 +42,11 @@
 
   <div class="Tekst">
     <h2>Hvordan vi testet koden</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam enim corrupti laborum labore cum expedita distinctio ipsam eveniet nostrum. 
-      Consequatur, minus at! Porro quod est id doloribus pariatur magnam tempora!
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quis numquam repudiandae dicta ratione rerum minus inventore saepe, voluptatem, eligendi sapiente quia. Deserunt tempore vitae debitis provident nam consequuntur consectetur.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, eum omnis aperiam inventore cumque, accusamus quo delectus nulla facere doloremque corrupti quibusdam aut asperiores quod illo facilis ratione consequuntur qui.
+    <p>Vi valgte å teste koden med W3C Validator (https://validator.w3.org/#validate_by_input). Vi testet hver fil ved å kopiere koden, deretter limte vi den inn i input boksen for «Validate by Direct Input». Vi fikk noen få tilbakemeldinger/error på hver fil. Men ikke noe som gjorde at vi måtte gjøre store forandringer i koden vår.
+    </p>
+    <p>
+      Vi ville at flest mulig kunne bruke websiden vår. For at det skulle være mulig krever det at vi bruker universalt design. Gjennom hele styling prosessen, prøvde vi å tenke på hvordan sidene skulle være mest brukervennlige. For eksempel sørget vi for at fargen på teksten og bakgrunnen hadde stor nok kontrast, slik at det var enkelt å lese. Vi passet også på at vi ikke brukte for liten font. Vi ønsket et tradisjonelt design, slik at brukeren kunne lett navigere og finne ønsket informasjon.
+      
     </p>
   </div>
 
