--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -42,10 +42,15 @@
 
   <div class="Tekst">
     <h2>Hvordan vi testet koden</h2>
-    <p>Vi valgte å teste koden med <a href="https://validator.w3.org/#validate_by_input">W3C Validator</a>. Vi testet hver fil ved å kopiere koden, deretter limte vi den inn i input boksen for «Validate by Direct Input». Vi fikk noen få tilbakemeldinger/error på hver fil. Men ikke noe som gjorde at vi måtte gjøre store forandringer i koden vår.
+    <p>Vi valgte å teste koden med <a href="https://validator.w3.org/#validate_by_input">W3C Validator</a>. Vi testet hver fil ved å kopiere koden, 
+      deretter limte vi den inn i input boksen for «Validate by Direct Input». Vi fikk noen få tilbakemeldinger/error på hver fil. Men ikke noe som 
+      gjorde at vi måtte gjøre store forandringer i koden vår. 
     </p>
     <p>
-      Vi ville at flest mulig kunne bruke websiden vår. For at det skulle være mulig krever det at vi bruker universalt design. Gjennom hele styling prosessen, prøvde vi å tenke på hvordan sidene skulle være mest brukervennlige. For eksempel sørget vi for at fargen på teksten og bakgrunnen hadde stor nok kontrast, slik at det var enkelt å lese. Vi passet også på at vi ikke brukte for liten font. Vi ønsket et tradisjonelt design, slik at brukeren kunne lett navigere og finne ønsket informasjon.
+      Vi ville at flest mulig kunne bruke websiden vår. For at det skulle være mulig krevde det at vi brukte universalt design underveis. Gjennom hele styling 
+      prosessen, prøvde vi å tenke på hvordan sidene skulle være mest brukervennlige. For eksempel sørget vi for at fargen på teksten og bakgrunnen hadde stor 
+      nok kontrast, slik at det var enkelt å lese. Vi passet også på at vi ikke brukte for liten font. Vi ønsket et tradisjonelt design, slik at brukeren kunne 
+      lett navigere og finne ønsket informasjon.
       
     </p>
   </div>
