--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -36,8 +36,8 @@
 <div class="Innhold">
   <div class=Før_test>
     <!--Bilde hentet fra: -->
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image1" alt="Testing">
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image2" alt="Testing2">
+    <img src="/Side5/Images/testVelkommen.png" class="Testing-image1" alt="Testing">
+    <img src="/Side5/Images/testBooking.png" class="Testing-image2" alt="Testing2">
   </div>
 
   <div class="Tekst">
@@ -52,8 +52,8 @@
 
   <div class="Etter_test">
     <!--Bilde hentet fra: -->
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image3" alt="Testing3">
-    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image4" alt="Testing4">
+    <img src="/Side5/Images/testCSS.png" class="Testing-image3" alt="Testing3">
+    <img src="/Side5/Images/testMeny.png" class="Testing-image4" alt="Testing4">
   </div>
 </div>
 
